--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -7,17 +7,200 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-        
+        android:fitsSystemWindows="true"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways" />
-        
+
     </com.google.android.material.appbar.AppBarLayout>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:text="@string/welcome_to_stelarbank"
+                style="@style/title01"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:background="@drawable/stelar01"
+                android:text="Thank you very much to trust you money to us. We're honored to protect your savings. We're continue inproving all our services for you."
+                android:textSize="20dp"
+                android:textColor="#88FFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="40dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/finanzas02"/>
+
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:gravity="center">
+                <Button
+                    android:text="@string/transferencias"
+                    style="@style/button02"/>
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"/>
+                <Button
+                    android:text="@string/saldo"
+                    style="@style/button02"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:gravity="center">
+                <Button
+                    android:text="Otra Opcion"
+                    style="@style/button02"/>
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"/>
+                <Button
+                    android:text="Otra Opcion"
+                    style="@style/button02"/>
+            </LinearLayout>
+
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/stelar02"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:gravity="center">
+                <Button
+                    android:text="Otras Opciones"
+                    style="@style/button02"/>
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"/>
+                <Button
+                    android:text="Mas Opciones"
+                    style="@style/button02"/>
+            </LinearLayout>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:text="Otras opciones"
+                android:textColor="#0088FF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:text="Otras opciones"
+                android:textColor="#0088FF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/stelar02"/>
+
+            <TextView
+                android:text="Otras opciones"
+                android:textColor="#0088FF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="60dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/finanzas01"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="60dp"/>
+
+            <TextView
+                android:text="Otras opciones"
+                android:textColor="#0088FF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="60dp"/>
+
+            <TextView
+                android:text="StelarBank is registered brand of Stelita SA de CV Criminal Corporation v 1.0 :)"
+                android:textColor="#223344"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="40dp"/>
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
