--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -23,9 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
-        android:text="Codelia"
+        android:text="@string/stelarbank"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-
 
 </LinearLayout>
