--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,24 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item android:id="@+id/nav_item_one"
-            android:icon="@drawable/abc_vector_test"
-            android:title="Item 1"/>
+            android:icon="@drawable/ic_money"
+            android:title="MiCuenta"/>
         <item android:id="@+id/nav_item_two"
-            android:icon="@drawable/abc_vector_test"
-            android:title="Item 2"/>
+            android:icon="@drawable/ic_money"
+            android:title="Transferencias"/>
         <item android:id="@+id/nav_item_three"
-            android:icon="@drawable/abc_vector_test"
-            android:title="Item 3"/>
+            android:icon="@drawable/ic_money"
+            android:title="Inversiones"/>
     </group>
 
-    <item android:title="Title 1">
+    <item android:title="Otras opciones">
         <menu>
             <item android:id="@+id/nav_item_six"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Item 6"/>
+                android:icon="@drawable/ic_build"
+                android:title="Movimientos"/>
             <item android:id="@+id/nav_item_seven"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Item 7"/>
+                android:icon="@drawable/ic_build"
+                android:title="Ajustes" />
         </menu>
     </item>
 </menu>
