--- a/app/src/main/res/layout/activity_transferencias.xml
+++ b/app/src/main/res/layout/activity_transferencias.xml
@@ -66,6 +66,29 @@
         android:layout_margin="5dp"
         android:gravity="left">
         <TextView
+            android:text="Pagos"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"/>
+        <Space
+            android:layout_width="40dp"
+            android:layout_height="20dp"/>
+        <Button
+            android:id="@+id/btn_pagos"
+            android:text="Realizar un pago"
+            style="@style/button02"/>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="20dp"
+        android:layout_height="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:gravity="left">
+        <TextView
             android:text="CuentasStelar Bank"
             android:layout_width="150dp"
             android:layout_height="wrap_content"/>
